--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <img src="img/GoodContect.png" alt="GoodContect">
+    <img src="../img/GoodContent.png" alt="">
   <header>
     <!-- place navbar here -->
   </header>
