--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -3,29 +3,36 @@
 
 <head>
   <title>Title</title>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="design.css">
 
 </head>
 
 <body>
 
-    <img src="../img/GoodContent.png" alt="">
-  <header>
-    <!-- place navbar here -->
-  </header>
-  <main>
+  <div class="container">
 
-  </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
-  <!-- Bootstrap JavaScript Libraries -->
+
+
+      <div class="top-container">
+      <div class="top-elements">
+      <div class="logo"><img src="../img/logo.png" alt="" width="150px" height="50px"></div>
+      <div class="buttonright"><button>Create content with AI</button></div>
+      </div>
+      </div>
+
+
+  
+    </div>
+
+
+   
+  
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
