--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -18,18 +18,18 @@
   <div class="container">
 
 
-
-      <div class="top-container">
-      <div class="top-elements">
+  <div class="navbar">
+    
       <div class="logo"><img src="../img/logo.png" alt="" width="150px" height="50px"></div>
-      <div class="buttonright"><button>Create content with AI</button></div>
+      <div class="top-menu">
+      <a href="">Free Tools</a>
+      <a href="">State of Content Marketing</a>
+      <a href="">Free Resources</a>
       </div>
+      <button>Create content with AI</button>
       </div>
-
-
-  
     </div>
-
+      
 
    
   
