--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -28,6 +28,23 @@
       </div>
       <button>Create content with AI</button>
       </div>
+
+      <div class="main-components">
+        <div class="left-side">
+        <h1>Grow Your Business with Content Marketing in 2023</h1>
+
+        </div>
+
+        <div class="right-side">
+asdsadsad
+
+        </div>
+
+
+      </div>
+
+
+
     </div>
       
 
