--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -31,7 +31,26 @@
 
       <div class="main-components">
         <div class="left-side">
-        <h1>Grow Your Business with Content Marketing in 2023</h1>
+        <h1>Grow Your Business with Content Marketing in <br>2023</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorem nobis reiciendis explicabo provident maiores quos, deserunt est tenetur ipsa.</p>
+
+          <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" placeholder="First Name*" required><br>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1"> I have a bike</label><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, rerum.</p>
+            
+
+            
+          </form>
+
 
         </div>
 
