--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -35,16 +35,12 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorem nobis reiciendis explicabo provident maiores quos, deserunt est tenetur ipsa.</p>
 
           <form>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" placeholder="First Name*" required><br>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="John"><br>
+            <input type="text" id="name" name="name" placeholder="First Name*" class="form-element" required><br>
+            <input type="text" id="email" name="email" placeholder="Email*" class="form-element" required><br>
+            <input type="text" id="organization" name="organization" placeholder="Organization type*" class="form-element" required><br>
+            <input type="text" id="fname" name="fname" placeholder="First Name*" class="form-element" required ><br>
             <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-            <label for="vehicle1"> I have a bike</label><br>
+            <label for="vehicle1"> Send me Semrush news, events and exculisive offers</label><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, rerum.</p>
             
 
