--- a/GoodContent/index.html
+++ b/GoodContent/index.html
@@ -51,7 +51,12 @@
         </div>
 
         <div class="right-side">
-asdsadsad
+
+          <div class="img-content">
+
+            <img src="/img/1.jpg" alt="" style="float: right;">
+
+          </div>
 
         </div>
 
